--- a/zentao/task.html
+++ b/zentao/task.html
@@ -102,8 +102,8 @@ function render(obj)
     $("#priIcon").classList.add('pri-' + obj.pri);
     $("#objID").classList.add('pri-' + obj.pri);
     var $status = $('#objStatus');
-    $status.innerHTML = obj.statusInfo.name;
-    $status.classList.add('mui-badge-' + obj.statusInfo.color);
+    $status.innerHTML = obj.statusName;
+    $status.classList.add('mui-badge-' + obj.statusColor);
     $("#assignedTo").classList[obj.assignedTo ? 'remove' : 'add']('mui-hidden');
     $('#noAssignedTo').classList[obj.assignedTo ? 'add' : 'remove']('mui-hidden');
 
