* ajusted ui to display unread items.

--- a/zentao/tasks.html
+++ b/zentao/tasks.html
@@ -84,8 +84,11 @@ mui.init(
 
 document.querySelector("#slider .mui-slider-group").addDelegateListener("tap", ".mui-table-view-cell", function(e)
 {
-    this.classList.remove('unread');
-    updateTabBadge(this.getAttribute('data-tab'));
+    if(this.classList.contains('unread'))
+    {
+        this.classList.remove('unread');
+        updateTabBadge(this.getAttribute('data-tab'));
+    }
     showItem(this.getAttribute('data-id'), this);
 });
 
@@ -98,7 +101,10 @@ zentao.ready(function()
 function updateTabBadge(tab, count)
 {
     var $tabBadge = $('.tab-badge-' + tab);
-    count = count || (parseInt($tabBadge.innerHTML) - 1);
+    if(typeof count === 'undefined')
+    {
+        count = (parseInt($tabBadge.innerHTML) - 1);
+    }
     $tabBadge.classList[count > 0 ? 'remove' : 'add']('mui-hidden');
     $tabBadge.innerHTML = count;
 }
@@ -174,7 +180,6 @@ function show(tab, data)
                 item.classList.add('unread');
                 unreadCount++;
             }
-            item.setAttribute('id', 'item-' + val.id);
             item.setAttribute('data-id', val.id);
             item.setAttribute('data-tab', tab);
             item.innerHTML = '<span class="list-title"><span class="list-item-id">' + val.id + '</span>' + val.name + '</span>' + '<span class="mui-badge mui-badge-' + val.statusColor + '">' + val.statusName + '</span>';
