--- a/zentao/index.html
+++ b/zentao/index.html
@@ -45,16 +45,25 @@
     </section>
   </div>
 
-  <script src="js/core.js"></script>
-  <script src="js/$.js"></script>
-  <script src="js/console.js"></script>
-  <script src="js/store.js"></script>
-  <script src="js/md5.min.js"></script>
-  <script src="js/mui.js"></script>
-  <script src="js/zentao.js"></script>
-  <script src="js/webview.js"></script>
-  <script src="js/app.js"></script>
-  <script>
-  </script>
+<script src="js/core.js"></script>
+<script src="js/$.js"></script>
+<script src="js/console.js"></script>
+<script src="js/store.js"></script>
+<script src="js/md5.min.js"></script>
+<script src="js/mui.js"></script>
+<script src="js/zentao.js"></script>
+<script src="js/webview.js"></script>
+<script src="js/app.js"></script>
+<script>
+function startSync()
+{
+    $('#userStatus').classList.add('syncing');
+}
+
+function endSync()
+{
+    $('#userStatus').classList.remove('syncing');
+}
+</script>
 </body>
 </html>
