--- a/zentao/todos.html
+++ b/zentao/todos.html
@@ -52,19 +52,6 @@
       </div>
   </div>
 </div>
-<!-- <div id="dialog" class="dialog">
-  <div class="mui-table-view-cell dialog-header"><span class="mui-icon mui-icon-checkbox"></span> <span class="list-title"></span><span class="mui-badge"></span></div>
-  <div class="dialog-body">
-    <h5 class="mui-content-padded">描述</h5>
-    <div class="mui-content-padded item-desc"></div>
-  </div>
-  <div class="dialog-footer">
-    <div class="mui-row">
-      <div class="mui-col-xs-6 mui-col"><button class="mui-btn mui-btn-block mui-btn-outlined btn-back">返回</button></div>
-      <div class="mui-col-xs-6 mui-col mui-col-extra"><button class="mui-btn mui-btn-positive mui-btn-block">完成任务</button></div>
-    </div>
-  </div>
-</div> -->
 
 <script src="js/core.js"></script>
 <script src="js/$.js"></script>
@@ -74,86 +61,9 @@
 <script src="js/mui.js"></script>
 <script src="js/zentao.js"></script>
 <script src="js/webview.js"></script>
+<script src="js/listview.js"></script>
 <script>
-var subTabs = ['today', 'yestoday', 'thisweek', 'lastweek'];
-
-mui.init(
-{
-    swipeBack: false,
-
-    pullRefresh:
-    {
-        container: '#todoList',
-        down:
-        {
-            contentdown: "下拉可以刷新",
-            contentover: "释放立即刷新",
-            contentrefresh: "正在刷新...",
-            callback: function(callback)
-            {
-                reload(callback);
-            }
-        }
-    }
-});
-
-document.querySelector("#slider .mui-slider-group").addDelegateListener("tap", ".mui-table-view-cell", function(e)
-{
-    if(this.classList.contains('unread'))
-    {
-        this.classList.remove('unread');
-        updateTabBadge(this.getAttribute('data-tab'));
-    }
-    showItem(this.getAttribute('data-id'), this);
-});
-
-zentao.ready(function()
-{
-    showAll();
-    reload();
-});
-
-function updateTabBadge(tab, count)
-{
-    var $tabBadge = $('.tab-badge-' + tab);
-    if(typeof count === 'undefined')
-    {
-        count = (parseInt($tabBadge.innerHTML) - 1);
-    }
-    $tabBadge.classList[count > 0 ? 'remove' : 'add']('mui-hidden');
-    $tabBadge.innerHTML = count;
-}
-
-function reload(callback)
-{
-    if(!zentao.isReady) return;
-
-    zentao.loadData('todo', function(data)
-    {
-        showAll();
-        callback && callback();
-    }, callback);
-}
-
-function showAll()
-{
-    show('today');
-    show('yestoday');
-    show('thisweek');
-    show('lastweek');
-    zentao.data['todo'].markRead();
-}
-
-function showItem(id, $item)
-{
-    plus.webview.create("todo.html", "todo-" + id, 
-    {
-        top: "44px",
-        bottom: "0px",
-        bounce: "vertical",
-        scrollIndicator: "none"
-    }, {dialogOptions: {id: id, type: 'todo'}}).show('slide-in-right', 200);
-};
+listView({type: 'todo', tabs: ['today', 'yestoday', 'thisweek', 'lastweek']});
 
 function show(tab, data)
 {
@@ -187,6 +97,7 @@ function show(tab, data)
             item.classList.add('mui-table-view-cell');
             item.classList.add('pri');
             item.classList.add('pri-' + val.pri);
+            item.classList.add('item-id-' + val.id);
             if(val.unread)
             {
                 item.classList.add('unread');
