--- a/zentao/tasks.html
+++ b/zentao/tasks.html
@@ -59,95 +59,13 @@
 <script src="js/mui.js"></script>
 <script src="js/zentao.js"></script>
 <script src="js/webview.js"></script>
+<script src="js/listview.js"></script>
 <script>
-var subTabs = ['assignedTo', 'openedBy', 'finishedBy', 'closedBy'];
-
-mui.init(
-{
-    swipeBack: false,
-
-    pullRefresh:
-    {
-        container: '#taskList',
-        down:
-        {
-            contentdown: "下拉可以刷新",
-            contentover: "释放立即刷新",
-            contentrefresh: "正在刷新...",
-            callback: function(callback)
-            {
-                reload(callback);
-            }
-        }
-    }
-});
-
-document.querySelector("#slider .mui-slider-group").addDelegateListener("tap", ".mui-table-view-cell", function(e)
-{
-    if(this.classList.contains('unread'))
-    {
-        this.classList.remove('unread');
-        updateTabBadge(this.getAttribute('data-tab'));
-    }
-    showItem(this.getAttribute('data-id'), this);
-});
-
-zentao.ready(function()
-{
-    showAll();
-    reload();
-});
-
-function updateTabBadge(tab, count)
-{
-    var $tabBadge = $('.tab-badge-' + tab);
-    if(typeof count === 'undefined')
-    {
-        count = (parseInt($tabBadge.innerHTML) - 1);
-    }
-    $tabBadge.classList[count > 0 ? 'remove' : 'add']('mui-hidden');
-    $tabBadge.innerHTML = count;
-}
-
-function reload(callback)
-{
-    if(!zentao.isReady)
-    {
-        console.error('禅道未准备就绪，无法获取数据。');
-        throw new Error('禅道未准备就绪，无法获取数据');
-        return;
-    };
-
-    zentao.loadData('task', function(data)
-    {
-        showAll();
-        callback && callback();
-    }, callback);
-}
-
-function showAll()
-{
-    subTabs.forEach(function(val)
-    {
-        show(val);
-    });
-    zentao.data['task'].markRead();
-}
-
-function showItem(id, $item)
-{
-    plus.webview.create("task.html", "task-" + id, 
-    {
-        top: "44px",
-        bottom: "0px",
-        bounce: "vertical",
-        scrollIndicator: "none"
-    }, {dialogOptions: {id: id, type: 'task'}}).show('slide-in-right', 200);
-};
+listView({type: 'task', tabs: ['assignedTo', 'openedBy', 'finishedBy', 'closedBy']});
 
 function show(tab, data)
 {
-    data = data || zentao.filterData('task', tab);
+    data = data || zentao.filterData(type, tab);
     var $tab = $('#' + tab),
         $tasks = $('#' + tab + ' .list-tasks'),
         unreadCount = 0,
@@ -166,6 +84,7 @@ function show(tab, data)
         data = groupedData[group];
         item = item = document.createElement('li');
         item.classList.add('mui-table-view-divider');
+        item.classList.add('item-id-' + val.id);
         item.innerHTML = '<span class="mui-badge">' + data[0]['projectName'] + ' (<strong>' + data.length + '</strong>)</span>';
         $tasks.appendChild(item);
 
