--- a/zentao/index.html
+++ b/zentao/index.html
@@ -24,6 +24,8 @@
     #userStatus[data-status="online"] #userStatusIcon {background: #4CD964; border-color: #27b43f; border-style: solid}
     #userStatus[data-status="logging"] #userStatusIcon {background: #F0AD4E; border-color: #dfa655; -webkit-animation: loggingFlash 1.5s ease 0 infinite normal; animation: loggingFlash 1.5s ease 0 infinite normal;}
     #userStatus.syncing[data-status="online"] #userStatusIcon {background: #4CD964; border-color: #27b43f; -webkit-animation: syncingFlash 1.5s ease 0 infinite normal; animation: syncingFlash 1.5s ease 0 infinite normal;}
+
+    .open-subpage.unread:after {border-radius: 4px; display: inline-block; width: 8px; height: 8px; background-color: red; content: ' '; margin-left: 3px;}
     </style>
 </head>
 <body>
@@ -32,10 +34,10 @@
     <a id="settingBtn" class="mui-icon mui-icon-cog mui-pull-right"></a>
     <h1 class="mui-title">
       <div class="mui-segmented-control" id="subpageNav">
-        <a class="mui-control-item mui-active open-subpage" href="###" data-id="todo">待办</a>
-        <a class="mui-control-item open-subpage" href="###" data-id="task">任务</a>
-        <a class="mui-control-item open-subpage" href="###" data-id="bug">Bug</a>
-        <a class="mui-control-item open-subpage" href="###" data-id="story">需求</a>
+        <a class="mui-control-item mui-active open-subpage" href="###" data-id="todo" id="tab-todo">待办</a>
+        <a class="mui-control-item open-subpage" href="###" data-id="task" id="tab-task">任务</a>
+        <a class="mui-control-item open-subpage" href="###" data-id="bug" id="tab-bug">Bug</a>
+        <a class="mui-control-item open-subpage" href="###" data-id="story" id="tab-story">需求</a>
       </div>
     </h1>
   </header>
